// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel tests matches snapshot after clicking left arrow 1`] = `
<div>
  <div
    class="Carousel"
  >
    <h1>
      images for testing
    </h1>
    <div
      class="Carousel-main"
    >
      <i
        class="bi bi-arrow-left-circle"
        style="visibility: hidden;"
      />
      <div
        class="Card"
      >
        <h4
          class="Card-title"
        >
          testing image 1
        </h4>
        <img
          alt="testing image 1"
          class="Card-image"
          src="test1.com"
        />
        <small
          class="Card-small"
        >
          Image 
          1
           of 
          3
          .
        </small>
      </div>
      <i
        class="bi bi-arrow-right-circle"
        style="visibility: visible;"
      />
    </div>
  </div>
</div>
`;

exports[`Carousel tests matches snapshot after clicking right arrow 1`] = `
<div>
  <div
    class="Carousel"
  >
    <h1>
      images for testing
    </h1>
    <div
      class="Carousel-main"
    >
      <i
        class="bi bi-arrow-left-circle"
        style="visibility: visible;"
      />
      <div
        class="Card"
      >
        <h4
          class="Card-title"
        >
          testing image 2
        </h4>
        <img
          alt="testing image 2"
          class="Card-image"
          src="test2.com"
        />
        <small
          class="Card-small"
        >
          Image 
          2
           of 
          3
          .
        </small>
      </div>
      <i
        class="bi bi-arrow-right-circle"
        style="visibility: visible;"
      />
    </div>
  </div>
</div>
`;

exports[`Carousel tests matches the snapshot 1`] = `
<div>
  <div
    class="Carousel"
  >
    <h1>
      Test carouselTitle
    </h1>
    <div
      class="Carousel-main"
    >
      <i
        class="bi bi-arrow-left-circle"
        style="visibility: hidden;"
      />
      <div
        class="Card"
      >
        <h4
          class="Card-title"
        >
          testing image 1
        </h4>
        <img
          alt="testing image 1"
          class="Card-image"
          src="test1.com"
        />
        <small
          class="Card-small"
        >
          Image 
          1
           of 
          3
          .
        </small>
      </div>
      <i
        class="bi bi-arrow-right-circle"
        style="visibility: visible;"
      />
    </div>
  </div>
</div>
`;
